syntax = "proto3";

package nats.v1;

option go_package = "github.com/manabie-com/backend/pkg/manabuf/nats/v1;npb";

import "nats/v1/enums.proto";
import "common/v1/enums.proto";
import "common/v1/contents.proto";
import "google/protobuf/timestamp.proto";

message EventMasterRegistration {
    message Course {
        ActionKind action_kind = 1;
        string course_id = 2;
        string course_name = 3;
        common.v1.CourseStatus status = 4;
    }
    message Class {
        ActionKind action_kind = 1;
        string class_name = 2;
        uint64 class_id = 3;
        string course_id = 4;
        google.protobuf.Timestamp start_date = 5;
        google.protobuf.Timestamp end_date = 6;
        string academic_year_id = 7;
    }
    message Lesson {
        ActionKind action_kind = 1;
        string lesson_id = 2;
        string course_id = 3;
        google.protobuf.Timestamp start_date = 4;
        google.protobuf.Timestamp end_date = 5;
        string lesson_group = 6;
        string class_name = 7;
        common.v1.LessonType lesson_type = 8;
    }
	message AcademicYear {
		ActionKind action_kind = 1;
		string academic_year_id = 2;
		string name = 3;
		google.protobuf.Timestamp start_year_date = 4;
		google.protobuf.Timestamp end_year_date = 5;
	}

    string signature = 1;
    bytes raw_payload = 2;
    google.protobuf.Timestamp timestamp = 3;
    repeated Course courses = 4;
    repeated Class classes = 5;
    repeated Lesson lessons = 6;
    repeated AcademicYear academic_years = 7;
    string log_id = 8;
}

message EventUserRegistration {
    message Student {
        ActionKind action_kind = 1;
        string student_id = 2;
        repeated int64 student_divs = 3;
        string last_name = 4;
        string given_name = 5;
        message Package {
            // class id to find courseID
            int64 class_id = 1;
            google.protobuf.Timestamp start_date = 2;
            google.protobuf.Timestamp end_date = 3;
        }
        repeated Package packages = 6;
    }
    message Staff {
        ActionKind action_kind = 1;
        string staff_id = 2;
        string name = 3;
    }

    string signature = 1;
    bytes raw_payload = 2;
    google.protobuf.Timestamp timestamp = 3;
    repeated Student students = 4;
    repeated Staff staffs = 5;
    string log_id = 6;
}

message EventSyncUserCourse {
    message StudentLesson {
        ActionKind action_kind = 1;
        string student_id = 2;
        repeated string lesson_ids = 3;
    }

    string signature = 1;
    bytes raw_payload = 2;
    google.protobuf.Timestamp timestamp = 3;
    repeated StudentLesson student_lessons = 4;
    string log_id = 5;
}

message EventSyncStudentPackage {
  message Package {
    repeated string course_ids = 1;
    google.protobuf.Timestamp start_date = 2;
    google.protobuf.Timestamp end_date = 3;
  }

  message StudentPackage {
    ActionKind action_kind = 1;
    string student_id = 2;
    repeated Package packages = 3;
  }

  repeated StudentPackage student_packages = 1;
}
